:sparkles: update form

--- a/index.html
+++ b/index.html
@@ -26,34 +26,26 @@
                 <form id="create-product" action="form-product">
                     <div class="form-row">
                         <div class="input-wrap">
-                            <label for="form-id" class="text--16 mb--8">Nom / Identification du PTI</label>
-                            <input id="form-id" class="input--text2" type="text" placeholder="Nom / Identification du PTI" required>
-                        </div>
-                        <div class="input-wrap">
-                            <label for="form-address" class="text--16 mb--8">Rue</label>
-                            <input id="form-address" class="input--text2" type="text" placeholder="Rue" required>
+                            <label for="form-id" class="text--16 mb--8">Numero de série de la montre</label>
+                            <input id="form-id" class="input--text2" type="text" placeholder="Numero de série de la montre" required>
                         </div>
                     </div>
-                    <div class="form-row">
+                    <div class="form-row mb--32">
                         <div class="input-wrap">
-                            <label for="form-address-supp" class="text--16 mb--8">Complément d'adresse</label>
-                            <input id="form-address-supp" class="input--text2" type="text" placeholder="Complément d'adresse" required>
+                            <label for="form-id-port" class="text--16 mb--8">Champs identification porteur</label>
+                            <input id="form-id-port" class="input--text2" type="text" placeholder="Champs identification porteur" required>
                         </div>
                         <div class="input-wrap">
-                            <label for="form-cp" class="text--16 mb--8">Code postal</label>
-                            <input id="form-cp" class="input--text2" type="text" placeholder="Code postal" required>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="input-wrap">
-                            <label for="form-city" class="text--16 mb--8">Ville</label>
-                            <input id="form-city" class="input--text2" type="text" placeholder="Ville" required>
-                        </div>
-                        <div class="input-wrap">
-                            <label for="form-phone" class="text--16 mb--8">Téléphone du porteur</label>
-                            <input id="form-phone" class="input--text2" type="text" placeholder="Téléphone du porteur" required>
+                            <label for="form-tel-port" class="text--16 mb--8">Champs tel porteur</label>
+                            <input id="form-tel-port" class="input--text2" type="text" placeholder="Champs tel porteur" required>
                         </div>
                     </div>
+                    <p class="title--three title--three--black-dark mb--16">
+                        Contact d'urgence N°1
+                    </p>
+                    <p class="text--16 text--16--black-light mb--32">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem necessitatibus magni beatae recusandae earum ipsa totam omnis adipisci praesentium modi deleniti possimus quaerat, exercitationem sunt sequi. Vel aspernatur nihil porro!
+                    </p>
                     <div class="form-row">
                         <div class="input-wrap">
                             <label for="form-firstname-1" class="text--16 mb--8">Nom du contact 1</label>
@@ -64,31 +56,33 @@
                             <input id="form-lastname-1" class="input--text2" type="text" placeholder="Prénom du contact 1" required>
                         </div>
                     </div>
-                    <div class="form-row">
+                    <div class="form-row mb--32">
                         <div class="input-wrap">
                             <label for="form-phonenb-1" class="text--16 mb--8">Tel de contact 1</label>
                             <input id="form-phonenb-1" class="input--text2" type="text" placeholder="Tel de contact 1" required>
                         </div>
+                    </div>
+                    <p class="title--three title--three--black-dark mb--16">
+                        Contact d'urgence N°2
+                    </p>
+                    <p class="text--16 text--16--black-light mb--32">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem necessitatibus magni beatae recusandae earum ipsa totam omnis adipisci praesentium modi deleniti possimus quaerat, exercitationem sunt sequi. Vel aspernatur nihil porro!
+                    </p>
+                    <div class="form-row">
                         <div class="input-wrap">
                             <label for="form-lastname-2" class="text--16 mb--8">Nom du contact 2</label>
                             <input id="form-lastname-2" class="input--text2" type="text" placeholder="Nom du contact 2" required>
                         </div>
-                    </div>
-                    <div class="form-row mb--16">
                         <div class="input-wrap">
                             <label for="form-firstname-2" class="text--16 mb--8">Prénom du contact 2</label>
                             <input id="form-firstname-2" class="input--text2" type="text" placeholder="Prénom du contact 2" required>
                         </div>
+                    </div>
+                    <div class="form-row mb--16">
                         <div class="input-wrap">
                             <label for="form-phonenb-2" class="text--16 mb--8">Tel de contact 2</label>
                             <input id="form-phonenb-2" class="input--text2" type="text" placeholder="Tel de contact 2" required>
                         </div>
-                    </div>
-                    <div class="form-row">
-                        <select name="select-products" id="form-select" class="input--text2">
-                            <option value="dog">Prom</option>
-                            <option value="cat">600002</option>
-                        </select>
                     </div>
                     <input class="btn--primary mb--64" type="submit" value="Ajouter cet appareil">
                 </form>
